--- a/asi/asi/asi.csproj
+++ b/asi/asi/asi.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="asi.cs" />
+    <Compile Include="Data\asiSQLStruct.cs" />
     <Compile Include="Data\asiSSMS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IRepository.cs" />
