--- a/nMappers/nMappers.csproj
+++ b/nMappers/nMappers.csproj
@@ -158,6 +158,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Codes\asiTablesStruct.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\asiAuthController.cs" />
     <Compile Include="Controllers\asiTablesController.cs" />
@@ -332,7 +333,6 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\asiTables\TabelList.cshtml" />
     <Content Include="Views\asiTables\TabelDetails.cshtml" />
     <Content Include="Views\asiTables\Index.cshtml" />
     <Content Include="Views\asiAuth\Index.cshtml" />
